# easy-sq

./: .gitignore  Cargo.toml
sample.esq/: metadata.json
src/: error.rs  file_load.rs  main.rs  pick_project.rs  player.rs  project.rs  song.rs  ui.rs
