[package]
name = "easy-sq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rodio = { version = "0.17", default-features = false }
embed-manifest = "1"
parking_lot = "0.12"
serde_json = "1"
eframe = { version = "0.24", features = ["persistence"] }
thiserror = "1"
