[package]
name = "easy-sq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5.3", features = ["all-codecs", "all-formats"] }
eframe = { version = "0.24", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
embed-manifest = "1"
parking_lot = "0.12"
serde_json = "1"
thiserror = "1"
cpal = { version = "0.15.2", features = ["asio", "jack"] }
egui_extras = "0.24.2"
